--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                         <div class="slider-text">
                             <h5>
                             <i class="fa fa-plane animated infinite fadeInLeft slow"></i><br>
-                            welcome to<br><span>mts tours</span><br>lets make travel simple<br>
+                            welcome to<br><span>tours and travels</span><br>lets make travel simple<br>
                             <a href="#"><i class="fas fa-arrow-down animated infinite fadeInDown slow"></i></a>
                             </h5>
                         </div>
@@ -74,7 +74,7 @@
                         <div class="slider-text">
                             <h5>
                             <i class="fa fa-plane animated infinite fadeInLeft slow"></i><br>
-                            welcome to<br><span>mts tours</span><br>lets make travel simple<br>
+                             welcome to<br><span>tours and travels</span><br>lets make travel simple<br>
                             <a href="#"><i class="fas fa-arrow-down animated infinite fadeInDown slow"></i></a>
                             </h5>
                         </div>
@@ -84,7 +84,7 @@
                         <div class="slider-text">
                            <h5>
                             <i class="fa fa-plane animated infinite fadeInLeft slow"></i><br>
-                            welcome to<br><span>mts tours</span><br>lets make travel simple<br>
+                             welcome to<br><span>tours and travels</span><br>lets make travel simple<br>
                             <a href="#"><i class="fas fa-arrow-down animated infinite fadeInDown slow"></i></a>
                             </h5>
                         </div>
@@ -94,7 +94,7 @@
                         <div class="slider-text">
                            <h5>
                             <i class="fa fa-plane animated infinite fadeInLeft slow"></i><br>
-                            welcome to<br><span>mts tours</span><br>lets make travel simple<br>
+                             welcome to<br><span>tours and travels</span><br>lets make travel simple<br>
                             <a href="#"><i class="fas fa-arrow-down animated infinite fadeInDown slow"></i></a>
                             </h5>
                         </div>
@@ -104,7 +104,7 @@
                         <div class="slider-text">
                             <h5>
                             <i class="fa fa-plane animated infinite fadeInLeft slow"></i><br>
-                            welcome to<br><span>mts tours</span><br>lets make travel simple<br>
+                             welcome to<br><span>tours and travels</span><br>lets make travel simple<br>
                             <a href="#"><i class="fas fa-arrow-down animated infinite fadeInDown slow"></i></a>
                             </h5>
                         </div>
@@ -114,7 +114,7 @@
                         <div class="slider-text">
                             <h5>
                             <i class="fa fa-plane animated infinite fadeInLeft slow"></i><br>
-                            welcome to<br><span>mts tours</span><br>lets make travel simple<br>
+                             welcome to<br><span>tours and travels</span><br>lets make travel simple<br>
                             <a href="#"><i class="fas fa-arrow-down animated infinite fadeInDown slow"></i></a>
                             </h5>
                         </div>
@@ -137,9 +137,9 @@
                     </div>
                     <div class="col-md-6 col-12 px-2">
                         <div class="about-content">
-                            <h4>Welcome To MTS Tours</h4>
-                            <h5>mts tours and travels</h5>
-                            <p class="text-left">MTS Tours is a premiere tour operator located in Madurai and operating since January 01 ,2017.This is the Part of  <b>MTS GROUP OF COMPANIES.</b> We also provide travel services like Bus, Train and Flight tickets etc. We believe in the total satisfaction of our customers with our quality service products. Our services have been designed to cater almost every need of the travellers whether domestic or partly International. The team operates with a motto to provide an excellence of services.</p>
+                            <h4>Welcome To tours and travels</h4>
+                            <h5>tours and travels</h5>
+                            <p class="text-left">tours and travels is a premiere tour operator located in Tamilnadu and operating since January 01 ,2017.This is the Part of  <b>tours and travels</b> We also provide travel services like Bus, Train and Flight tickets etc. We believe in the total satisfaction of our customers with our quality service products. Our services have been designed to cater almost every need of the travellers whether domestic or partly International. The team operates with a motto to provide an excellence of services.</p>
                         </div>
                     </div>
                 </div>
@@ -338,16 +338,16 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6 col-sm-12">
-                    <iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3929.929662634867!2d78.10534801479367!3d9.939810492892427!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x71ec329d461bdd2d!2sMTS%20LED%20TV!5e0!3m2!1sen!2sin!4v1580639652155!5m2!1sen!2sin" allowfullscreen="" class="w-100 h-100"></iframe>
+                    Maps
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-12">
                     <h5 class="text-center">
                     <i class="fas fa-envelope-open"></i>
                     &ensp;READY FOR BOOKING !
                     </h5><br>
-                    <p>Phone : +(91) 99522 16627</p>
-                    <p>Email : mymtstours@gmail.com</p>
-                    <form action="mail.php" method="post" class="text-center">
+                    <p>Phone : +(1) 00999 88877</p>
+                    <p>Email : developer@gmail.com</p>
+                    <form action="" method="post" class="text-center">
                         <div class="row" style="margin-top: 20px;">
                         <div class="col-lg-6 col-md-6" class="form-group">
                             <input type="text" name="uname" placeholder="Name" class="form-control" required>
@@ -378,7 +378,7 @@
         <div class="container text-center">
         <div class="footer">
             <p>© 2021  . All rights reserved | Design by
-                <a href="http://mtssoftwaresolution.com">MtsSoftwareSolution.com</a>
+                <a href="">bthiruyw</a>
             </p>
         </div>
     </div>
