--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>MTS TOURS | HOME</title>
+        <title>TOURS | HOME</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -18,7 +18,6 @@
         <link rel="stylesheet" type="text/css" href="css/mystyle.css">
         <link rel="stylesheet" type="text/css" href="css/responsive.css">
         <!--TITLE ICON-->
-        <link rel="icon" href="img/logo.jpg">
         
     </head>
     <body>
